# KeyWordAPI

./: pyproject.toml
TextRankapp/: apps.py
TextRankapp/apis/v1/: TR_router.py
TextRankapp/apis/v1/schemas/: TR_request.py  TR_response.py  __init__.py
TextRankapp/services/: TR_service.py  user_dict.txt
tests/: TR_keyword.py
textRank/: asgi.py  settings.py  urls.py  wsgi.py
